<resources>
    <string name="app_name">ZenHabit</string>
    <string name="Benvingut">¡Benvingut!</string>
    <string name="introduction">ZenHabit és una aplicació que es va fer amb el propòsit de gestionar el temps de manera eficient per aconseguir objectius personals.</string>
    <string name="title_introduction_2">¡Reptes diaris segons el teu propòsit!</string>
    <string name="introduction_2">T&quot;acompanyem perquè compleixis els teus propòsits a través del nostre sistema de reptes</string>
    <string name="seguent">Següent</string>
    <string name="description_task_optional">Descripció (opcional)</string>
    <string name="category_labelName">Categoria</string>
    <string name="task_label">Tasca</string>
    <string name="habit_label">Hàbit</string>
    <string name="tasques">Tasques</string>
    <string name="howto_earn">Com aconseguir-les?</string>
    <string name="jardi">Jardí</string>
    <string name="arbre">Arbre</string>
    <string name="recompenses">Recompenses</string>
    <string name="arbres">Arbres</string>
    <string name="planta">Planta</string>
    <string name="plantes">Plantes</string>
    <string name="aconseguit">Aconseguit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="boto_per_editar_tasca">Boto per editar tasca</string>
    <string name="usuari_mail">Usuari/Mail</string>
    <string name="has_oblidat_la_contrase_a">Has oblidat la contraseña?</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="logoimage">LogoImage</string>
    <string name="benvingut_da">Benvingut/da!</string>
    <string name="inicia_sessi_per_continuar">Inicia sessió per continuar</string>
    <string name="registre_t">Registre\'t</string>
    <string name="inicia_sessi">Inicia Sessió</string>
    <string name="nom_tasca">Nom_Tasca</string>
    <string name="hora_tasca">Hora_Tasca</string>
    <string name="diaryimage">diaryImage</string>
    <string name="graphimage">graphImage</string>
    <string name="habits_complerts">Habits complerts</string>
    <string name="tasques_complertes">Tasques complertes</string>
    <string name="pendents">Pendents</string>
    <string name="diaryimage2">diaryImage2</string>
    <string name="diari">Diari</string>
    <string name="DiaryScreenTitle">Diari</string>
    <string name="jard">Jardí</string>
    <string name="tvTasques">Tasques</string>
    <string name="tens_x_activitats_pendents">Tens (x) activitats pendents</string>
    <string name="errorNullUsername">L\'usuari no pot estar buit</string>
    <string name="errorNullPassword">La contraseña no pot estar buida</string>
    <string name="errorNullEmail">El email no pot estar buit</string>
    <string name="errorWrongPassword">La contraseña es incorrecta.</string>
    <string name="errorInexistentEmail">El email no existeix</string>
    <string name="errorEmailBadFormatted">El format del email no es correcte</string>
    <string name="errorUnexistentUser">Aquest email no esta registrat.</string>
    <string name="errorTempPassLocked">Ho has intentat masses vegades. Torna més tard.</string>
    <string name="errorEmailAlreadyInUse">Aquest email ja esta registrat.</string>
    <string name="emailSent">El email ha sigut enviat</string>
    <string name="passwordChangeOk">Contraseña canviada correctament</string>
    <string name="errorMismatchedPasswords">Les contraseñes no coincideixen.</string>
    <string name="recommendedPassword">Contrasenya recomanada</string>
    <string name="reptes_diaris">Reptes diaris</string>
    <string name="llegir_10_minuts">Llegir 10 minuts</string>
    <string name="todo">TODO</string>
    <string name="veure_recompensa">Veure recompensa</string>
    <string name="fes_te_un_selfie">Fes\'te un selfie</string>
    <string name="todoUppercase">TODO</string>
    <string name="veure_recompensa_UpperCase">Veure recompensa</string>
    <string name="_10_flexions">10 flexions</string>
    <string name="todo3">TODO</string>
    <string name="ordenar_per">Ordenar per:</string>
    <string name="reptes">Reptes</string>
    <string name="h_bits">Hàbits</string>
    <string name="seguiment">Seguiment</string>
    <string name="complerts">Complerts</string>
    <string name="configuracions">Configuracions</string>
    <string name="configura_el_teu_perfil">Configura el teu perfil</string>
    <string name="guardar">Guardar</string>
    <string name="tancar_sessi">Tancar Sessió</string>
    <string name="canviar_nom_d_usuari">Canviar nom d\'usuari</string>
    <string name="canviar_contrasenya">Canviar contrasenya</string>
    <string name="canviar_email">Canviar email</string>
    <string name="spinner_titulo">Elige la categoria</string>
    <string name="repetir_contrasenya">Repetir Contrasenya</string>
    <string name="nova_contrasenya">Nova contrasenya</string>
    <string name="hola">Hola!</string>
    <string name="restableix_la_teva_contrasenya">Restableix la teva contrasenya</string>
    <string name="cancel_la">CANCEL·LA</string>
    <string name="acceptar">Acceptar</string>
    <string name="email">Email</string>
    <string name="hola2">Hola!</string>
    <string name="restableix_la_teva_contrasenya2">Restableix la teva contrasenya</string>
    <string name="cancel_la2">CANCEL·LA</string>
    <string name="enviar">Enviar</string>
    <string name="introdueix_el_teu_correu_electr_nic_i_t_enviarem_un_enlla_per_restablir_la_teva_contrasenya">Introdueix el teu correu electrònic i t\'enviarem un enllaç per restablir la teva contrasenya</string>
    <string name="contrasenya2">Contrasenya</string>
    <string name="email3">Email</string>
    <string name="nom_d_usuari3">Nom d\'usuari</string>
    <string name="hola4">Hola!</string>
    <string name="completa_el_teu_perfil">Completa el teu perfil</string>
    <string name="cancel_la4">CANCEL·LA</string>
    <string name="registre_t2">Registre\'t</string>
    <string name="nom_arbre_planta">Nom_Arbre_Planta</string>
    <string name="has_obtingut_x">Has obtingut x</string>
    <string name="_20_min">20 min</string>
    <string name="_30_min">30 min</string>
    <string name="categoria">(CATEGORIA)</string>
    <string name="categoria2">(CATEGORIA)</string>
    <string-array name="categoria">
        <item>Aprenentatge</item>
        <item>Productivitat</item>
        <item>Salut</item>
    </string-array>
</resources>