<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.zenhabit.fragments.DiaryScreen">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="317dp"
        android:layout_height="118dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/diaryrectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:contentDescription="@string/diaryimage" />

    <ImageView
        android:id="@+id/imagentemporal"
        android:layout_width="119dp"
        android:layout_height="99dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/diagrama"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        android:contentDescription="@string/graphimage" />

    <TextView
        android:id="@+id/tvHabitsComplerts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:text="@string/habits_complerts"
        android:textColor="@color/ringChartRed"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/tvPendents" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:text="@string/tasques_complertes"
        android:textColor="@color/primary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/tvHabitsComplerts" />

    <TextView
        android:id="@+id/tvPendents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="108dp"
        android:text="@string/pendents"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="210dp"
        android:layout_height="147dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/diary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/diaryimage2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="149dp"
        android:layout_height="69dp"
        android:layout_marginTop="24dp"
        android:text="@string/diari"
        android:textColor="@color/primary"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

</androidx.constraintlayout.widget.ConstraintLayout>