<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.zenhabit.fragments.jardi">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/lbl_Jardi"
            android:layout_width="111dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:text="@string/jardi"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.173"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbl_EarnIt"
            android:layout_width="305dp"
            android:layout_height="51dp"
            android:layout_marginTop="28dp"
            android:text="@string/aconseguit"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="145dp"
            android:layout_height="205dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rectangle"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.199"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_Jardi">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_plants_howtoearn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/plantes"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/lbl_howToEarn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/howto_earn"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/lbl_timeToEarn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/_20_min"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_plant_how_toearn"
                    android:layout_width="17dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/plant_1" />

                <TextView
                    android:id="@+id/lbl_plant_howtoearn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/planta"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="145dp"
            android:layout_height="205dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rectangle_red"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_Jardi">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_trees_howtoearn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/arbres"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/lbl_howToEarn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/howto_earn"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/lbl_timeToEarn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/_30_min"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_plant_how_toearn2"
                    android:layout_width="3dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/tree_1" />

                <TextView
                    android:id="@+id/lbl_tree_howtoearn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/arbre"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/jardiRecyclerView"
            android:layout_width="306dp"
            android:layout_height="230dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/recompenses"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_EarnIt"></androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>