<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.zenhabit.fragments.UserSettings">


    <TextView
        android:id="@+id/tvSettingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="22dp"
        android:text="@string/configuracions"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvChangePasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/configura_el_teu_perfil"
        android:textColor="@color/primary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettingsLabel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSaveChanges"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="199dp"
        android:layout_height="60dp"

        android:layout_marginTop="36dp"
        android:text="@string/guardar"
        android:textColor="@color/primary"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeEmailLayout"
        app:strokeColor="@color/primary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btLogout"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="199dp"
        android:layout_height="60dp"

        android:layout_marginTop="4dp"
        android:text="@string/tancar_sessi"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSaveChanges"
        app:strokeColor="@color/red" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newUsernameLayout"
        android:layout_width="351dp"
        android:layout_height="78dp"
        android:layout_marginTop="28dp"
        android:background="@color/transparent"

        android:textColorHint="@color/hints"
        app:boxBackgroundColor="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePasswordLabel"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
        app:startIconTint="@color/primary">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_newUsername"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"

            android:hint="@string/canviar_nom_d_usuari"

            android:inputType="text"
            android:textColor="@color/primary"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="0dp"


            tools:layout_editor_absoluteY="33dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changePasswordLayout"

        android:layout_width="344dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:hint="@string/canviar_contrasenya"
        android:textColorHint="@color/hints"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUsernameLayout"
        app:startIconDrawable="@drawable/ic_baseline_password_24"

        app:startIconTint="@color/primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="textPassword"

            android:textColor="@color/primary">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changeEmailLayout"
        android:layout_width="352dp"
        android:layout_height="72dp"
        android:layout_marginTop="48dp"
        android:background="@color/transparent"
        android:textColorHint="@color/hints"
        app:boxBackgroundColor="@color/transparent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordLayout"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
        app:startIconTint="@color/primary">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputChangeEmail"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"

            android:hint="@string/canviar_email"

            android:inputType="textEmailAddress"
            android:textColor="@color/primary"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="0dp"


            tools:layout_editor_absoluteY="33dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRecommendedPassword"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:text="@string/recommendedPassword"
        android:textAllCaps="false"
        android:textColor="@color/hints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordLayout"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>

