<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.MainActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayoutRegister"

        android:layout_width="271dp"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        android:hint="@string/contrasenya2"
        android:textColorHint="@color/hints"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        app:startIconDrawable="@drawable/ic_baseline_password_24"
        app:startIconTint="@color/primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword_RegisterScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="textPassword"

            android:textColor="@color/primary">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="272dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:textColorHint="@color/hints"
        app:boxBackgroundColor="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLayoutRegister"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
        app:startIconTint="@color/primary">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail_RegisterScreen"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"

            android:hint="@string/email3"

            android:inputType="textEmailAddress"
            android:textColor="@color/primary"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="0dp"


            tools:layout_editor_absoluteY="33dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayoutRegister"
        android:layout_width="274dp"
        android:layout_height="78dp"
        android:layout_marginTop="12dp"
        android:background="@color/transparent"
        android:textColorHint="@color/hints"
        app:boxBackgroundColor="@color/transparent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIniciSessio2"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
        app:startIconTint="@color/primary">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUsername_RegisterScreen"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"

            android:hint="@string/nom_d_usuari3"

            android:inputType="text"
            android:textColor="@color/primary"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="0dp"


            tools:layout_editor_absoluteY="33dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="248dp"
        android:layout_height="117dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_light" />

    <TextView
        android:id="@+id/tvIniciSessio1"
        android:layout_width="303dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/hola4"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvIniciSessio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="160dp"
        android:text="@string/completa_el_teu_perfil"
        android:textColor="@color/primary"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/tvIniciSessio1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btCancel_RegisterScreen"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="199dp"
        android:layout_height="61dp"
        android:text="@string/cancel_la4"
        android:textColor="@color/red"
        android:textSize="18dp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRegister"
        app:strokeColor="@color/red" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btRegister"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="199dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/registre_t2"
        android:textSize="18dp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayoutRegister"
        app:strokeColor="@color/primary" />

    <TextView
        android:id="@+id/snackbarRegister"
        android:layout_width="177dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCancel_RegisterScreen" />

</androidx.constraintlayout.widget.ConstraintLayout>